--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 ### JetBrains+all Patch ###
-# Ignore everything but code style settings and run configurations
+# Ignore everything but code style settings and run.txt configurations
 # that are supposed to be shared within teams.
 
 .idea/*
